# samcell-napari

./: .gitignore  LICENSE  MANIFEST.in  README.md  pyproject.toml  requirements.txt  setup.cfg
samcell_napari/: __init__.py  __main__.py  _dock_widget.py  _sample_data.py  metrics.py  model.py  napari.yaml  pipeline.py  slidingWindow.py
