[metadata]
name = samcell-napari
version = 1.0.0
author = Saahil Sanganeriya
author_email = saahilsanganeria666@gmail.com
description = A napari plugin for cell segmentation with SAMCell 1.0
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/saahilsanganeriya/samcell-napari
project_urls =
    Bug Tracker = https://github.com/saahilsanganeriya/samcell-napari/issues
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Framework :: napari
    Intended Audience :: Science/Research
    Topic :: Scientific/Engineering :: Bio-Informatics
    Topic :: Scientific/Engineering :: Image Processing

[options]
packages = find:
python_requires = >=3.8
include_package_data = True
install_requires =
    napari>=0.4.14
    numpy
    torch>=1.9
    transformers>=4.26.0
    scikit-image>=0.19.0
    opencv-python>=4.5.0
    timm>=0.6.0
    
[options.extras_require]
safetensors =
    safetensors>=0.3.0
dev =
    black
    pytest
    pytest-cov
    
[options.entry_points]
napari.manifest =
    samcell-napari = samcell_napari:napari.yaml

[options.package_data]
* = *.yaml
samcell_napari = napari.yaml 